--- a/pom.xml
+++ b/pom.xml
@@ -155,13 +155,8 @@
 			<version>0.0.1</version>
 		</dependency>
 		<dependency>
-			<groupId>SeguridadConsumidor</groupId>
-			<artifactId>SeguridadConsumidor</artifactId>
-			<version>0.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>SeguridadDatos</groupId>
-			<artifactId>SeguridadDatos</artifactId>
+			<groupId>SmileConsumidor</groupId>
+			<artifactId>SmileConsumidor</artifactId>
 			<version>0.0.1</version>
 		</dependency>
 		<dependency>
