--- a/.classpath
+++ b/.classpath
@@ -21,6 +21,6 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jasypt-1.9.2.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-api-1.7.13.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/zkcharts.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.7.0_80"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
