--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,58 @@
 		</dependency>
 		<!-- /Zk Theme -->
 
+		<dependency>
+			<groupId>org.zkoss.zk</groupId>
+			<artifactId>zhtml</artifactId>
+			<version>${zk.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.zkoss.zk</groupId>
+			<artifactId>zml</artifactId>
+			<version>${zk.version}-Eval</version>
+		</dependency>
+
+		<!-- ZK Graphics -->
+		<dependency>
+			<groupId>org.zkoss.graphics</groupId>
+			<artifactId>graphics</artifactId>
+			<version>0.8.0</version>
+		</dependency>
+		<!-- ZK JSP -->
+		<dependency>
+			<groupId>org.zkoss.zk</groupId>
+			<artifactId>zuljsp</artifactId>
+			<version>2.0</version>
+		</dependency>
+
+		<!-- Addons -->
+		<dependency>
+			<groupId>org.zkoss.addon</groupId>
+			<artifactId>flashchart</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.zkoss.zkforge</groupId>
+			<artifactId>gmapsz</artifactId>
+			<version>3.0.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.zkoss.zkforge</groupId>
+			<artifactId>ckez</artifactId>
+			<version>4.4.6.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.zkoss.calendar</groupId>
+			<artifactId>calendar</artifactId>
+			<version>2.1.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.zkoss.pivot</groupId>
+			<artifactId>pivottable</artifactId>
+			<version>2.2.0-Eval</version>
+		</dependency>
+
+
 		<!-- Struts2 -->
 		<dependency>
 			<groupId>org.apache.struts</groupId>
@@ -169,11 +221,11 @@
 			<artifactId>LightsCore</artifactId>
 			<version>0.0.1</version>
 		</dependency>
-		
+
 		<dependency>
-		  <groupId>org.apache.pdfbox</groupId>
-		  <artifactId>pdfbox</artifactId>
-		  <version>1.8.10</version>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>1.8.10</version>
 		</dependency>
 	</dependencies>
 </project>
