--- a/pom.xml
+++ b/pom.xml
@@ -221,7 +221,11 @@
 			<artifactId>LightsCore</artifactId>
 			<version>0.0.1</version>
 		</dependency>
-
+	<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.1.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.pdfbox</groupId>
 			<artifactId>pdfbox</artifactId>
